[gd_scene load_steps=8 format=3 uid="uid://5kfayolc3hji"]

[ext_resource type="Script" path="res://ork.gd" id="1_6ifs0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0bge4"]

[sub_resource type="SphereMesh" id="SphereMesh_i7vtc"]
radius = 10.0
height = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mh04j"]
bg_color = Color(0.00392157, 0.203922, 0.321569, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2uw1"]
bg_color = Color(0, 0.623529, 0.733333, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ryc8"]
bg_color = Color(0.176471, 0, 0.0235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6825"]
bg_color = Color(0.733333, 0.231373, 0.227451, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Ork" type="CharacterBody2D"]
script = ExtResource("1_6ifs0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0bge4")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
self_modulate = Color(0.380392, 0.235294, 0.607843, 1)
mesh = SubResource("SphereMesh_i7vtc")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="OnScreenLabel" type="Label" parent="."]
offset_left = -52.0
offset_top = -72.0
offset_right = 52.0
offset_bottom = -46.0
text = "NotOnScreen"

[node name="AttentionBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_top = -32.0
offset_right = 56.0
offset_bottom = -16.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_mh04j")
theme_override_styles/fill = SubResource("StyleBoxFlat_r2uw1")
value = 30.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -56.0
offset_top = -48.0
offset_right = 56.0
offset_bottom = -33.0
theme_override_styles/background = SubResource("StyleBoxFlat_4ryc8")
theme_override_styles/fill = SubResource("StyleBoxFlat_l6825")
value = 50.0
show_percentage = false

[node name="AttentionTimer" type="Timer" parent="."]
autostart = true

[node name="HealthTimer" type="Timer" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="AttentionTimer" to="." method="_on_attention_timer_timeout"]
[connection signal="timeout" from="HealthTimer" to="." method="_on_health_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
